--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,12 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
+  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  margin: auto;
+  max-width: 500px;
+  min-height: 100vh;
+  padding: 0 0.5rem;
 }
 
 .main {
